// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormDmnOutputs tests should render an anchor tag 1`] = `
<a
  class="kogito--editor__dmn-form-result__evaluation-link"
>
  Evaluation failed
</a>
`;

exports[`FormDmnOutputs tests should render an paragraph tag 1`] = `
<p
  class="kogito--editor__dmn-form-result__evaluation-link"
>
  Evaluation failed
</p>
`;

exports[`FormDmnOutputs tests should render the DMNFormResult with the empty state 1`] = `
<h2
  class=""
  data-ouia-component-id="OUIA-Generated-Text-1"
  data-ouia-component-type="PF4/Text"
  data-ouia-safe="true"
  data-pf-content="true"
>
  No response
</h2>
`;

exports[`FormDmnOutputs tests should render the FormDmnOutputs with more then one result 1`] = `
<h2
  class="pf-c-title pf-m-xl"
  data-ouia-component-id="OUIA-Generated-Title-2"
  data-ouia-component-type="PF4/Title"
  data-ouia-safe="true"
>
  Decision-1
</h2>
`;

exports[`FormDmnOutputs tests should render the FormDmnOutputs with more then one result 2`] = `
<h2
  class="pf-c-title pf-m-xl"
  data-ouia-component-id="OUIA-Generated-Title-3"
  data-ouia-component-type="PF4/Title"
  data-ouia-safe="true"
>
  Decision-2
</h2>
`;

exports[`FormDmnOutputs tests should render the FormDmnOutputs with more then one result 3`] = `
<h2
  class="pf-c-title pf-m-xl"
  data-ouia-component-id="OUIA-Generated-Title-4"
  data-ouia-component-type="PF4/Title"
  data-ouia-safe="true"
>
  Decision-3
</h2>
`;

exports[`FormDmnOutputs tests should render the FormDmnOutputs with one result 1`] = `
<h2
  class="pf-c-title pf-m-xl"
  data-ouia-component-id="OUIA-Generated-Title-1"
  data-ouia-component-type="PF4/Title"
  data-ouia-safe="true"
>
  Decision-1
</h2>
`;
